Add master dependencies