@@ -138,7 +138,7 @@
 
                     <!-- the argLine variable is needed for JaCoco -->
                     <argLine>
-                        -Xms128m -Xmx1G -XX:MaxPermSize=128M
+                        -Xms128m -Xmx1G
                         -Dhazelcast.phone.home.enabled=false
                         -Dhazelcast.mancenter.enabled=false
                         -Dhazelcast.logging.type=jdk
@@ -388,6 +388,13 @@
             <scope>test</scope>
             <optional>true</optional>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.mockito</groupId>-->
+<!--            <artifactId>mockito-core</artifactId>-->
+<!--            <version>3.6.0</version>-->
+<!--            <scope>test</scope>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
@@ -440,7 +447,7 @@
             <id>test-coverage</id>
             <properties>
                 <argLine>
-                    -Xms128m -Xmx1G -XX:MaxPermSize=128M
+                    -Xms128m -Xmx1G
                     -Dhazelcast.version.check.enabled=false
                     -Dhazelcast.mancenter.enabled=false
                     -Dhazelcast.logging.type=jdk
@@ -580,16 +587,24 @@
         </profile>
         <profile>
             <id>master</id>
-            <properties>
-                <hazelcast.version>5.5.0-SNAPSHOT</hazelcast.version>
-            </properties>
             <dependencies>
                 <dependency>
-                    <groupId>com.hazelcast</groupId>
-                    <artifactId>hazelcast</artifactId>
-                    <version>${hazelcast.version}</version>
+                    <groupId>org.opentest4j</groupId>
+                    <artifactId>opentest4j</artifactId>
+                    <version>${opentest4j.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                    <version>${mockito.version}</version>
+                    <scope>test</scope>
                 </dependency>
             </dependencies>
+            <properties>
+                <hazelcast.version>5.5.0-SNAPSHOT</hazelcast.version>
+                <mockito.version>5.12.0</mockito.version>
+                <opentest4j.version>1.3.0</opentest4j.version>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -599,7 +614,7 @@
                         <configuration combine.self="override">
                             <parallel>none</parallel>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                            <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
+                            <argLine>-Xms128m -Xmx1G
                                 -Dhazelcast.phone.home.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.logging.type=jdk
